# Advancely

./: .gitattributes  .gitignore  Advancely.manifest  CMakeLists.txt  Info.plist  LICENSE  LICENSES.txt  README.md  _PLEASE_READ_ME.txt  icon.rc  vcpkg.json
.github/workflows/: build.yml
external_libs/include/: SDL_FontCache.c  cJSON.c  cJSON_Utils.c  float.h
external_libs/lib/pkgconfig/: libdeflate.pc
include/: SDL_FontCache.h
packaging/linux/: PKGBUILD  advancely.desktop  dev.LNXSeus.Advancely.metainfo.xml  launcher
relay/: frame.go  gen_cert.sh  go.mod  main.go  proto.go  room.go
resources/config/: settings.json  settings_1_0.json  settings_1_0_test1.json  settings_1_11_2_test1.json  settings_1_16_1_test1.json  settings_1_21_8_miku%.json  settings_1_6_4_test1.json  settings_25w14craftmine_test1.json  settings_raw_template.json
resources/gui/: Advancely_Logo_NoText.icns
resources/icons/items/: 0-item-versions.json  manifest.json
resources/lang/: english.json
resources/reference_files/: 1.0-1.6.4_stats_ach_item_ids.txt  1.0_stats_file.json  1.11.2_achievements_file.json  1.11.2_stats_file.json  1.12.2_advancements_file.json  1.12.2_stats_file.json  1.16.1_advancements_file.json  1.18.2_advancements_file.json  1.21.11_advancements_file.json  1.21.3_advancements_file.json  1.21.9_advancements_file.json  1.21.9_stats_file.json  1_11_2_stats_file_most_ach.json  1_16_1_reference_advancement_file.json  1_21_6_reference_advancement_file.json  25w14craftmine_advancements_file.json  settings.json
resources/temp_reference_files/: 1_11_2_reference_stats_file.json  1_21_6_reference_stats_file.json
resources/templates/1.0/acquire_hardware/: 1_0_acquire_hardware_test.json  1_0_acquire_hardware_test_lang.json
resources/templates/1.0/all_achievements/: 1_0_all_achievements.json  1_0_all_achievements_lang.json
resources/templates/1.0/test/: 1_0_test1.json  1_0_test1_lang.json  1_0_test1_snapshot.json
resources/templates/1.1/all_achievements/: 1_1_all_achievements_lang_ger.json
resources/templates/1.11.2/test/: 1_11_2_test1.json  1_11_2_test1_lang.json
resources/templates/1.11/all_achievements/: 1_11_all_achievements.json  1_11_all_achievements_lang.json  1_11_all_achievements_layout.json
resources/templates/1.12/all_advancements/: 1_12_all_advancements.json  1_12_all_advancements_categorical.json  1_12_all_advancements_categorical_lang.json  1_12_all_advancements_categorical_layout.json  1_12_all_advancements_lang.json
resources/templates/1.13/all_advancements/: 1_13_all_advancements.json  1_13_all_advancements_lang.json
resources/templates/1.14/all_advancements/: 1_14_all_advancements.json  1_14_all_advancements_lang.json  1_14_all_advancements_lang_ger.json  1_14_all_advancements_lang_zh_cn.json  1_14_all_advancements_optimized.json  1_14_all_advancements_optimized_lang.json  1_14_all_advancements_optimized_lang_ger.json  1_14_all_advancements_optimized_lang_zh_cn.json
resources/templates/1.15/all_advancements/: 1_15_all_advancements.json  1_15_all_advancements_lang.json  1_15_all_advancements_lang_ger.json  1_15_all_advancements_lang_zh_cn.json  1_15_all_advancements_optimized.json  1_15_all_advancements_optimized_lang.json  1_15_all_advancements_optimized_lang_ger.json  1_15_all_advancements_optimized_lang_zh_cn.json  1_15_all_advancements_optimized_layout.json
resources/templates/1.16.1/All_Advancements/: 1_16_1_All_Advancements.json  1_16_1_All_Advancements_lang.json  1_16_1_all_advancements_lang_ger.json
resources/templates/1.16.1/all_advancements/: 1_16_1_all_advancements.json  1_16_1_all_advancements_aatool_optimized.json  1_16_1_all_advancements_aatool_optimized_lang.json  1_16_1_all_advancements_aatool_optimized_lang_ger.json  1_16_1_all_advancements_aatool_optimized_lang_zh_cn.json  1_16_1_all_advancements_aatool_optimized_layout.json  1_16_1_all_advancements_aatool_optimized_notes.txt  1_16_1_all_advancements_categorical.json  1_16_1_all_advancements_categorical_lang.json  1_16_1_all_advancements_categorical_lang_ger.json  1_16_1_all_advancements_categorical_lang_zh_cn.json  1_16_1_all_advancements_categorical_layout.json  1_16_1_all_advancements_coop.json  1_16_1_all_advancements_coop_lang.json  1_16_1_all_advancements_coop_lang_ger.json  1_16_1_all_advancements_coop_lang_zh_cn.json  1_16_1_all_advancements_coop_layout.json  1_16_1_all_advancements_lang.json  1_16_1_all_advancements_lang_ger.json  1_16_1_all_advancements_lang_zh_cn.json  1_16_1_all_advancements_notes.txt  1_16_1_all_advancements_ssg_blackcat.json  1_16_1_all_advancements_ssg_blackcat_lang.json  1_16_1_all_advancements_ssg_blackcat_lang_ger.json  1_16_1_all_advancements_ssg_blackcat_lang_zh_cn.json  1_16_1_all_advancements_ssg_blackcat_layout.json
resources/templates/1.16.1/all_blocks/: 1_16_1_all_blocks.json  1_16_1_all_blocks_lang.json  1_16_1_all_blocks_layout.json
resources/templates/1.16.1/test/: 1_16_1_test1.json  1_16_1_test1_lang.json
resources/templates/1.16.2/all_advancements/: 1_16_2_all_advancements_categorical.json  1_16_2_all_advancements_categorical_lang.json  1_16_2_all_advancements_categorical_lang_ger.json  1_16_2_all_advancements_categorical_lang_zh_cn.json  1_16_2_all_advancements_categorical_layout.json
resources/templates/1.21/: advancements_optimised.json
resources/templates/1.21.4/: advancements_optimised.json
resources/templates/1.21.6/: all_advancementgs_optimized_lang.json  all_advancements_optimized.json
source/: coop_net.cpp  coop_net.h  coop_net_relay.cpp  coop_net_relay.h  data_structures.h  dialog_utils.cpp  dialog_utils.h  file_utils.c  file_utils.cpp  file_utils.h  format_utils.cpp  format_utils.h  global_event_handler.c  global_event_handler.cpp  global_event_handler.h  hermes_rotator.h  init.c  init.h  init_sdl.c  init_sdl.cpp  init_sdl.h  invite_code.cpp  invite_code.h  ipc_data.h  logger.cpp  logger.h  main.c  main.cpp  main.h  mojang_api.cpp  mojang_api.h  overlay.c  overlay.cpp  overlay.h  path_utils.c  path_utils.cpp  path_utils.h  relay_config.example.h  relay_config.h  settings.c  (+22 more)
source/imgui/: cimgui.cpp  cimgui.h
(+132 files in other folders)
